Fix Netlify publish directory path
Co-authored-by: Ona <no-reply@ona.com>

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "pangi-dapp"
   command = "npm run build"
-  publish = "pangi-dapp/out"
+  publish = "out"
 
 [build.environment]
   NODE_VERSION = "20"
