Add comprehensive test suite for frontend-program connection
- Add Jest testing framework with Next.js integration
- Create frontend-connection.test.ts:
  * Test program initialization for all 4 programs
  * Verify correct program IDs
  * Validate IDL structure
  * Test connection to Solana devnet
  * Verify programs exist on-chain
  * Check program methods availability
- Create sdk.test.ts:
  * Test PDA derivation functions
  * Verify consistent PDA generation
  * Validate program ID constants
- Create idl-validation.test.ts:
  * Validate IDL file existence
  * Check JSON syntax
  * Verify required fields
  * Test program-specific structures
- Add test scripts to package.json
- Add testing documentation (README.test.md)
- Configure Jest with jest.config.js and jest.setup.js

Tests ensure frontend can properly connect to deployed Solana programs.

Co-authored-by: Ona <no-reply@ona.com>

--- a/pangi-dapp/package.json
+++ b/pangi-dapp/package.json
@@ -6,7 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest --passWithNoTests",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:connection": "jest __tests__/frontend-connection.test.ts",
+    "test:sdk": "jest __tests__/sdk.test.ts",
+    "test:idl": "jest __tests__/idl-validation.test.ts"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.32.1",
@@ -21,12 +27,18 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^4",
+    "ts-jest": "^29.1.2",
     "typescript": "^5"
   }
 }
