Add comprehensive NFT evolution workflow tests
Added nft-evolution.test.ts with 19 tests covering complete NFT lifecycle:

Hatchling Initialization (3 tests):
- Validate initialize_hatchling instruction structure
- Validate hatchling account fields
- Simulate hatchling initialization

Evolution Mechanics (4 tests):
- Validate evolve_hatchling instruction
- Check evolution cooldown (cannot evolve yet)
- Check evolution cooldown (can evolve)
- Simulate first evolution (Hatchling → Juvenile)

Complete Evolution Journey (3 tests):
- Simulate full evolution path (0 → 9 stages)
- Calculate total rewards for max evolution (>100K PANGI)
- Simulate time-based evolution progression

Evolution Workflow Scenarios (4 tests):
- Scenario 1: New NFT holder - First 3 evolutions
- Scenario 2: Impatient holder - Try to evolve too early
- Scenario 3: Patient holder - Evolve to max level
- Scenario 4: Special NFT with 2x bonus multiplier

Evolution State Transitions (2 tests):
- Track state changes through evolution
- Validate evolution cannot exceed max level

Evolution Rewards Calculation (2 tests):
- Calculate cumulative rewards
- Verify exponential reward growth

Integration with Vault (1 test):
- Simulate evolution rewards deposited to vault

Test Results:
✅ 88 total tests passing (was 69)
✅ 19 new NFT evolution tests
✅ 0.903s execution time
✅ No ESM issues

Evolution stages tested:
Hatchling → Juvenile → Adolescent → Young Adult → Adult →
Mature → Elder → Ancient → Legendary → Transcendent

Co-authored-by: Ona <no-reply@ona.com>

--- a/pangi-dapp/package.json
+++ b/pangi-dapp/package.json
@@ -16,7 +16,8 @@
     "test:idl": "jest __tests__/idl-validation.test.ts",
     "test:integration": "jest __tests__/integration-examples.test.ts",
     "test:cross-program": "jest __tests__/cross-program.test.ts",
-    "test:all-working": "jest __tests__/idl-validation.test.ts __tests__/integration-examples.test.ts __tests__/sdk-esm.test.ts"
+    "test:nft-evolution": "jest __tests__/nft-evolution.test.ts",
+    "test:all-working": "jest __tests__/idl-validation.test.ts __tests__/integration-examples.test.ts __tests__/sdk-esm.test.ts __tests__/nft-evolution.test.ts"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.32.1",
